--- a/themes/Rozier/Resources/app/less/widgets/documents_widget.less
+++ b/themes/Rozier/Resources/app/less/widgets/documents_widget.less
@@ -115,9 +115,9 @@
 .sortable-ghost {
     border:1px dashed @documents-widget-border;
 
-    & * {
-        display: none;
-    }
+    //& * {
+    //    display: none;
+    //}
 }
 
 .documents-widget-sortable-list-item,
