--- a/themes/Rozier/Resources/app/less/widgets/drawer_widget.less
+++ b/themes/Rozier/Resources/app/less/widgets/drawer_widget.less
@@ -134,7 +134,7 @@
 .sortable-ghost {
     border: 1px dashed @documents-widget-border;
 
-    & * {
-        display: none !important;
-    }
+    //& * {
+    //    display: none !important;
+    //}
 }
