--- a/themes/Rozier/Resources/views/widgets/nodeTree/nodeTree.html.twig
+++ b/themes/Rozier/Resources/views/widgets/nodeTree/nodeTree.html.twig
@@ -68,6 +68,7 @@
                         {% endif %}
                     {% endfor %}
                 </ul>
+                <node-tree-component data-vuejs-persistent></node-tree-component>
             {% if mainNodeTree %}
             </div>
         </div>
