--- a/themes/Rozier/Resources/views/partials/css-inject.html.twig
+++ b/themes/Rozier/Resources/views/partials/css-inject.html.twig
@@ -1,9 +1,7 @@
 
 
 
-<link href="{{ head.resourcesUrl }}css/vendor.6a0045e2b1c8aa9708c1.css" rel="stylesheet">
-
-<link href="{{ head.resourcesUrl }}css/app.37824f225f68f0913ad0.css" rel="stylesheet">
+<link href="{{ head.resourcesUrl }}css/app.css" rel="stylesheet">
 
 
 
