--- a/themes/Rozier/Resources/views/base.html.twig
+++ b/themes/Rozier/Resources/views/base.html.twig
@@ -218,7 +218,8 @@
                     'nodesQuickAddAjax' :         '{{ path('nodesQuickAddAjax')}}',
                     'tagAjaxSearch':              '{{ path('tagAjaxSearch') }}',
                     'foldersAjaxSearch':          '{{ path('foldersAjaxSearch') }}',
-                    'ajaxSessionMessages':        '{{ path('ajaxSessionMessages') }}'
+                    'ajaxSessionMessages':        '{{ path('ajaxSessionMessages') }}',
+                    'nodesTreeJson':              '{{ path('nodesTreeJson') }}'
                 }
             };
 
