WIP: Context menu component

--- a/themes/Rozier/Resources/views/base.html.twig
+++ b/themes/Rozier/Resources/views/base.html.twig
@@ -91,6 +91,7 @@
             <explorer-container></explorer-container>
             <document-preview-container></document-preview-container>
             <modal-container></modal-container>
+            <contextual-menu-component />
         </div>
 
         <script type="text/javascript">
