--- a/themes/Rozier/Resources/views/base.html.twig
+++ b/themes/Rozier/Resources/views/base.html.twig
@@ -23,7 +23,7 @@
         <meta name="msapplication-TileImage" content="{{ head.resourcesUrl }}img/mstile-144x144.png" />
 
         {# CSS scripts inclusions / Using webpack #}
-        {% include 'partials/css-inject.html.twig' %}
+        {% include '@Rozier/partials/css-inject.html.twig' %}
 
         <link rel="stylesheet" href="{{ path('cssMainColor') }}" />
         {% block customStyles %}{% endblock %}
@@ -238,7 +238,7 @@
         {% endif %}
 
         {# JS scripts inclusions / Using webpack #}
-        {% include 'partials/js-inject.html.twig' %}
+        {% include '@Rozier/partials/js-inject.html.twig' %}
 
         {% block customScripts %}{% endblock %}
     </body>
