--- a/themes/Rozier/Resources/views/css/mainColor.css.twig
+++ b/themes/Rozier/Resources/views/css/mainColor.css.twig
@@ -30,13 +30,16 @@
  * Custom color on node tree
  * for {{ type.name }}
  */
+.nodetree-element.{{ type.name|lower }} > .rz-nestable-panel > .non-nestable-handle:before,
 .nodetree-element.{{ type.name|lower }} > .uk-nestable-panel > .non-nestable-handle:before,
+.nodetree-element.{{ type.name|lower }} > .rz-nestable-panel > .uk-nestable-handle:before,
 .nodetree-element.{{ type.name|lower }} > .uk-nestable-panel > .uk-nestable-handle:before {
     border-color:{{ type.color }};
 }
 .nodetree-element.{{ type.name|lower }} > .nodetree-list-item-color {
     background-color:{{ type.color }};
 }
+.nodetree-element.{{ type.name|lower }} > .rz-nestable-panel > .tree-contextualmenu .vertical-nodetype,
 .nodetree-element.{{ type.name|lower }} > .uk-nestable-panel > .tree-contextualmenu .vertical-nodetype {
     background-color:{{ type.color }};
 }
