WIP: Restructure nodes tree with universal component

--- a/themes/Rozier/Resources/views/widgets/nodeTree/nodeTree.html.twig
+++ b/themes/Rozier/Resources/views/widgets/nodeTree/nodeTree.html.twig
@@ -68,7 +68,7 @@
                         {% endif %}
                     {% endfor %}
                 </ul>
-                <node-tree-component data-vuejs-persistent></node-tree-component>
+                <tree-component url="{{ path('nodesTreeJson') }}" data-vuejs-persistent></tree-component>
             {% if mainNodeTree %}
             </div>
         </div>
