--- a/themes/Rozier/Resources/app/less/panels/trees_panel/trees_panel.less
+++ b/themes/Rozier/Resources/app/less/panels/trees_panel/trees_panel.less
@@ -21,7 +21,6 @@
     #main-trees-container{
         position: absolute;
         top:0; left:0; bottom:0;
-        // height:100%;
         overflow: hidden;
         padding-bottom:0;
         .transition(~'0.8s left ease');
@@ -30,11 +29,6 @@
 
     & > div {
         background-color: @maintree-global-bg;
-    }
-
-    .root-tree {
-        padding-bottom: 1em;
-        margin-left: 10px;
     }
 }
 
@@ -49,7 +43,7 @@
 
     .nodetree-widget{
         position: relative;
-        width:100%; height:100%;
+        width:100%;
     }
 
     /*
@@ -109,26 +103,18 @@
 .tree-scroll-cont{
     display:block;
     position: relative;
-    height:100%;
+    height: auto !important;
 
     @media (max-width: @screen-xs-max) {
         height: ~'calc(100vh - 220px)';
     }
+}
 
-    & > div{
-        overflow: hidden;
-        overflow-y:auto;
-        position:absolute;
-        top:0;
-        bottom:0;
-        left:0;
-        right:0;
-        -webkit-overflow-scrolling: touch;
-
-        & > ul{
-            position: relative;
-        }
-    }
+.scrolling-content {
+    height: ~'calc(100vh - 140px)';
+    overflow: hidden;
+    overflow-y:auto;
+    -webkit-overflow-scrolling: touch;
 }
 
 .tree-scroll{
@@ -166,7 +152,6 @@
         color: #555;
         font-size: 11px;
         .box-sizing();
-        // width: 28px;
         text-decoration: none;
         margin: 6px 0 0;
         outline:none;
@@ -218,7 +203,6 @@
                 color: @maintree-search-placeholder;
                 font-size: 12px;
                 width: 100%;
-                // padding: 19px 18px 18px;
                 .rounded(20px);
                 text-indent: 5px;
 
