--- a/themes/Rozier/static/css/app.css
+++ b/themes/Rozier/static/css/app.css
@@ -15384,11 +15384,6 @@ em {
   background-color: #D3D3D3;
 }
 
-#main-trees .root-tree {
-  padding-bottom: 1em;
-  margin-left: 10px;
-}
-
 #tree-container {
   position: relative;
   margin: 0;
@@ -15406,7 +15401,6 @@ em {
 #tree-container .nodetree-widget {
   position: relative;
   width: 100%;
-  height: 100%;
 }
 
 #tree-container .nodetree-element-img {
@@ -15464,7 +15458,7 @@ em {
 .tree-scroll-cont {
   display: block;
   position: relative;
-  height: 100%;
+  height: auto !important;
 }
 
 @media (max-width: 767px) {
@@ -15473,19 +15467,11 @@ em {
   }
 }
 
-.tree-scroll-cont > div {
+.scrolling-content {
+  height: calc(100vh - 140px);
   overflow: hidden;
   overflow-y: auto;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
   -webkit-overflow-scrolling: touch;
-}
-
-.tree-scroll-cont > div > ul {
-  position: relative;
 }
 
 .tree-scroll > .root-tree {
