handle lang selection with a new LangSelectorComponent (update TreeComponent when lang change)

--- a/themes/Rozier/Resources/views/base.html.twig
+++ b/themes/Rozier/Resources/views/base.html.twig
@@ -226,6 +226,16 @@
                 }
             };
 
+            temp.langs = []
+
+            {% for lang in themeServices.availableTranslations if lang.id %}
+                temp.langs.push({
+                    id: {{ lang.id }},
+                    locale: '{{ lang.preferredLocale }}',
+                    selected: {% if request.locale == lang.preferredLocale %}true{% else %}false{% endif %}
+                })
+            {% endfor %}
+
             var RozierRoot = temp;
         </script>
 
