--- a/themes/Rozier/Resources/views/panels/tree_panel.html.twig
+++ b/themes/Rozier/Resources/views/panels/tree_panel.html.twig
@@ -55,6 +55,7 @@
                             "nodeStatuses":nodeStatuses,
                             "request":request,
                         } only %}
+                        <lang-selector-component data-vuejs-persistent></lang-selector-component>
                         <tree-component url="{{ path('nodesTreeJson') }}" data-vuejs-persistent></tree-component>
                     </div>
                 </li>
