Added destroy method in TreeComponent to remove tree list

--- a/themes/Rozier/Resources/views/panels/tree_panel.html.twig
+++ b/themes/Rozier/Resources/views/panels/tree_panel.html.twig
@@ -55,8 +55,8 @@
                             "nodeStatuses":nodeStatuses,
                             "request":request,
                         } only %}
-                        <lang-selector-component data-vuejs-persistent></lang-selector-component>
-                        <tree-component url="{{ path('nodesTreeJson') }}" data-vuejs-persistent></tree-component>
+                        <lang-selector-component></lang-selector-component>
+                        <tree-component url="{{ path('nodesTreeJson') }}"></tree-component>
                     </div>
                 </li>
             {% endif %}
