WIP: Bulk actions / Restructure lang selection with local storage

--- a/themes/Rozier/Resources/views/nodes/filtersBar.html.twig
+++ b/themes/Rozier/Resources/views/nodes/filtersBar.html.twig
@@ -34,6 +34,8 @@
 
         {% include '@Rozier/widgets/itemPerPage.html.twig' %}
 
+        <bulk-actions-component data-vuejs></bulk-actions-component>
+
         <nav class="bulk-actions nodes-bulk-actions">
             <div class="bulk-actions-title-cont">
                 <h3 class="bulk-actions-title nodes-bulk-actions-title">{% trans %}bulk.actions{% endtrans %}</h3>
