WIP: Improve node tree drag and drop

--- a/themes/Rozier/Resources/views/nodes/tree.html.twig
+++ b/themes/Rozier/Resources/views/nodes/tree.html.twig
@@ -54,6 +54,7 @@
             <tree-component
                 data-vuejs
                 :bulk-enable="true"
+                :parent-id="{{ node.id }}"
                 url="{{ path('nodesTreeJson', { 'parent_id': node.id }) }}">
             </tree-component>
         </nav>
